# weldx

./: .appveyor.yml  .codacy.yml  .coveragerc  .deepsource.toml  .flake8  .git-blame-ignore-revs  .gitattributes  .gitignore  .pep8speaks.yml  .pre-commit-config.yaml  .readthedocs.yml  .ruff.toml  .travis.yml  .typo-ci.yml  .vulture_whitelist.py  .zenodo.json  23_test.py  CHANGELOG.md  CHANGELOG.rst  CITATION.cff  LICENSE  MANIFEST.in  README.md  README.rst  RELEASE.md  Remove_me.ipynb  Weld_test.ipynb  aws_run.py  aws_setup.py  changelog.rst  codecov.yml  conftest.py  environment.yml  load_script.py  pyproject.toml  readme.rst  save_script.py  setup.cfg  setup.py  tutorials
.binder/: environment.yml  postBuild
.github/: dependabot.yml  pull_request_template.md
.github/actions/: checkout_create_env.yml
.github/workflows/: build.yml  build_pkg.yml  cancel.yml  changelog.yml  ci_linux.yml  ci_windows.yml  citation.yml  clean_notebooks.yml  conda_build.yml  docs.yml  flake8.yml  install_quality_standards.yml  pydocstyle.yml  pytest.yml  pytest_asdf.yml  pytest_compat.yml  run_tests.yml  static_analysis.yml  trigger_binder_build.yml  unit_test_results.yml  vulture.yml
ci/: requirements-docs.yml
conda.recipe/: build_env.yml  meta.yaml
devtools/: environment.yml
devtools/conda.recipe/: build_env.yml  meta.yaml
devtools/doc/: Makefile
devtools/scripts/: clean_notebooks.py  pyupgrad_run.py  update_manifest.py
doc/: .gitignore  API.rst  CHANGELOG.md  Makefile  api.rst  asdf-extension.rst  asdf-schemas.rst  autosum.rst  changelog_link.rst  conf.py  contents.rst  devdoc.rst  disclaimer.md  index.md  index.rst  install.md  install.rst  legal-notice.md  legal-notice.rst  nitpick_ignore  rtd_environment.yml  shape-validation.md  shape_validation.md  standard.rst  tutorials.rst  unit-validation.md  validators.md  welding-processes.md
doc/_autosummary/: weldx._version.NotThisMethod.rst  weldx._version.VersioneerConfig.__eq__.rst  weldx._version.VersioneerConfig.__init__.rst  weldx._version.VersioneerConfig.__repr__.rst  weldx._version.VersioneerConfig.__str__.rst  weldx._version.VersioneerConfig.rst  weldx._version.get_config.rst  weldx._version.get_keywords.rst  weldx._version.get_versions.rst  weldx._version.git_get_keywords.rst  weldx._version.git_pieces_from_vcs.rst  weldx._version.git_versions_from_keywords.rst  weldx._version.plus_or_dot.rst  weldx._version.register_vcs_handler.rst  weldx._version.render.rst  weldx._version.render_git_describe.rst  weldx._version.render_git_describe_long.rst  weldx._version.render_pep440.rst  weldx._version.render_pep440_old.rst  weldx._version.render_pep440_post.rst  weldx._version.render_pep440_pre.rst  weldx._version.rst  weldx._version.run_command.rst  weldx._version.versions_from_parentdir.rst  weldx.constants.rst  weldx.core.MathematicalExpression.__eq__.rst  weldx.core.MathematicalExpression.__init__.rst  weldx.core.MathematicalExpression.__repr__.rst  weldx.core.MathematicalExpression.__str__.rst  weldx.core.MathematicalExpression.equals.rst  weldx.core.MathematicalExpression.evaluate.rst  weldx.core.MathematicalExpression.expression.rst  weldx.core.MathematicalExpression.get_variable_names.rst  weldx.core.MathematicalExpression.num_parameters.rst  weldx.core.MathematicalExpression.num_variables.rst  weldx.core.MathematicalExpression.parameters.rst  weldx.core.MathematicalExpression.rst  weldx.core.MathematicalExpression.set_parameter.rst  weldx.core.TimeSeries.__eq__.rst  weldx.core.TimeSeries.__init__.rst  (+287 more)
doc/_templates/: class-template.rst
doc/developers_doc/: configuration.md  faq.md  quantities.ipynb  time_data.md  xarray.md
doc/json_mime_render_plugin/: README.md  myst_nb_json_render_plugin.py  pyproject.toml
doc/schemas/: aws.rst  core.rst  datamodels.rst  equipment.rst  generic.rst  groove.rst  measurement.rst  process.rst  time.rst  units.rst
doc/source/: conf.py  index.rst
doc/src/: api.md  changelog_link.md  conf.py  index.md  install.md  legal-notice.md  nitpick_ignore  tutorials.md
doc/standard/: shape-validation.rst  unit-validation.rst  validators.rst  welding-processes.rst
doc/tutorials/: .gitignore  experiment_design_01.ipynb  geometry_02_geometry.ipynb  groove_types_01.ipynb  quality_standards.ipynb  welding_example_01_basics.ipynb  welding_example_02_weaving.ipynb  weldxfile.ipynb
scripts/: GMAW_process.ipynb  asdf_unit_validator.py  asdf_unit_validator.yaml  aws_run.py  aws_setup.py  clean_notebooks.py  draft_example.ipynb  graph_debug.py  graph_demo.ipynb  groove_load_script.py  groove_save_script.py  groove_selection_dashboard.ipynb  measurement_chain_with_equipment.ipynb  measurement_example.ipynb  repr.py  test_geo_triangulate.ipynb  validate_shapes.py  welding_schema.ipynb  welding_schema.py
tests/: _helpers.py  test_asdf.py  test_asdf_groove.py  test_core.py  test_geometry.py  test_measurement.py  test_transformations.py  test_utility.py  test_visualization.py  test_welding_util.py
tests/asdf/: test_core.py
tutorials/: .gitignore  01_01_introduction.ipynb  01_02_time_dependent_data.ipynb  01_03_geometry.ipynb  01_04_coordinate_systems.ipynb  01_05_measurement_chains.ipynb  02_02_time_dependent_data.ipynb  GMAW_process.ipynb  SpatialSeries.ipynb  TimeSeries_from_GenericSeries.ipynb  TraceSegmentSpS.ipynb  closed_mesh.ipynb  custom_metadata.ipynb  derived_series.ipynb  experiment_design_01.ipynb  generic_series.ipynb  geometry_01_profiles.ipynb  geometry_02_geometry.ipynb  groove_selection_dashboard.ipynb  groove_types_01.ipynb  measurement_chain.ipynb  measurement_example.ipynb  quality_standards.ipynb  remove_me.ipynb  sympy_diff.py  timeseries_01.ipynb  trace_segment.py  transformations_01_coordinate_systems.ipynb  transformations_02_coordinate_system_manager.ipynb  util.py  welding_example_01_basics.ipynb  welding_example_02_weaving.ipynb  weldxfile.ipynb
weldx/: __init__.py  _version.py  all_groove.py  config.py  constants.py  core.py  exceptions.py  geometry.py  measurement.py  time.py  transformations.py  types.py  util.py  utility.py  visualization.py  welding.py
(+567 files in other folders)
