[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=64",
  "setuptools-scm[toml]>=8",
  "wheel",
]

[project]
name = "weldx"
description = "Python API for the WelDX file format and standard"
readme = "README.md"
keywords = [
  "bam",     # TODO: add more keywords here! think of them as in a journal article.
  "welding",
  "weldx",
]
license = { file = "LICENSE" }
authors = [
  { name = "Çağtay Fabry", email = "cagtay.fabry@bam.de" },
  { name = "Volker Hirthammer", email = "volker.hirthammer@bam.de" },
  { name = "Martin K. Scherer", email = "martin.scherer@bam.de" },
  { name = "Michael Winkler", email = "michael.winkler@bam.de" },
]
requires-python = ">=3.9,<3.14"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Education",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: BSD License",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Physics",  # TODO: add more topics here!
]
dynamic = [
  "version",
]
dependencies = [
  "asdf>=2.15.1,<5",
  "bidict",
  "boltons",
  "bottleneck>=1.3.3",
  "fs",
  "ipython>=8",
  "meshio",
  "networkx>=2.8.2",
  "numpy>=1.20",
  "pandas>=1.5",
  "pint>=0.21",
  "pint-xarray>=0.3,<0.5",
  "psutil",
  "scipy>=1.6.2",
  "sympy>=1.6",
  "xarray>=2022.9",
]
optional-dependencies.docs = [
  "docutils>=0.19",
  "myst-nb-json",
  "numpydoc>=0.5",
  "pydata-sphinx-theme<0.15",             # parallel-write-unsafe
  "sphinx>=4.1.1,==7.2",
  "sphinx-autodoc-typehints>=1.21.8,==2",
  "sphinx-copybutton==0.5",
  "typing-extensions",
  "urllib3<2",
]
optional-dependencies.media = [
  "av",
  "dask-image",
  "pims",
  "tifffile",   # required by dask-image, but not listed in their requirements
]
optional-dependencies.test = [
  "nbval",
  "pytest>=6",
  "pytest-cov",
  "pytest-xdist",
]
optional-dependencies.vis = [
  "weldx-widgets>=0.2.5",
]
urls.bug_tracker = "https://github.com/BAMweldx/weldx/issues"
urls.changelog = "https://github.com/BAMweldx/weldx/blob/master/CHANGELOG.md"
urls.documentation = "https://weldx.readthedocs.io"
urls.repository = "https://github.com/BAMweldx/weldx"
scripts.welding_schema = "weldx.asdf.cli.welding_schema:main"
entry-points."asdf.extensions".weldx = "weldx.asdf.extension:get_extensions"
entry-points."asdf.resource_mappings".weldx_schemas = "weldx.asdf.extension:get_resource_mappings"

[tool.setuptools.packages.find]
where = [
  ".",
]

[tool.setuptools_scm]
# enable setuptools-scm versioning

[tool.nbqa.addopts]
ruff = [
  "--extend-ignore=B018",
]

[tool.pytest.ini_options]
addopts = "--tb=short --color=yes -rsw --cov=weldx --cov-report=term-missing:skip-covered --doctest-modules"
#addopts = --tb=short --color=yes -rs -p no:cov
testpaths = "weldx"
# custom test markers, see https://docs.pytest.org/en/latest/example/markers.html#mark-examples
markers = "slow: marks tests as slow to run (skipped by default, enable with --runslow option)"
asdf_schema_root = "weldx/schemas/weldx.bam.de/weldx"                                           # TODO: couldn't we just use the entry points to resolve this?
#asdf_schema_tests_enabled = true
#asdf_schema_skip_tests =
#    weldx.bam.de/weldx/datamodels/single_pass_weld-1.0.0.schema.yaml
norecursedirs = [
  "doc",
  ".ipynb_checkpoints",
]
filterwarnings = [
  "ignore::DeprecationWarning:traittypes.*:",
  "ignore:Passing method to :FutureWarning:xarray.*:",
  "error::pint.UnitStrippedWarning",
  #"error::FutureWarning",  # todo: we want to enable this, as it notifies us about upcoming failures due to upstream changes.
]

[tool.coverage.run]
source = [
  "weldx",
]

[tool.coverage.report]
omit = [
  "weldx/tests/*",
]
exclude_lines = [
  # Have to re-enable the standard pragma
  "pragma: no cover",

  # ignore class __repr__-like functions:
  "def __repr__",
  "def __str__",
  "def _ipython_display_",
]

[tool.mypy]
python_version = "3.9"
files = "weldx"
ignore_missing_imports = true # TODO: this is bad!
strict_optional = false
pretty = true
allow_redefinition = true
show_error_context = true
show_error_codes = true
show_column_numbers = true
sqlite_cache = true

# MyPy per-module options:
[[tool.mypy.overrides]]
module = [
  "weldx.asdf.*",
  "weldx.tags.*",
  "weldx.tests.*",
  "weldx.welding.groove.*",
  "weldx.geometry.*",
]
ignore_errors = true

# this is a workaround for an xarray related mypy bug
# see https://github.com/python/mypy/pull/9495
# and https://github.com/space-physics/msise00/commit/8b59a9383dd6fcc54b7dac74eb95a350308d7b62
# TODO: is this still mandatory?

[[tool.mypy.overrides]]
module = "xarray"
follow_imports = "skip"
ignore_errors = true
