[metadata]
name = weldx
author = Cagtay Fabry
author-email = Cagtay.Fabry@bam.de
home-page = https://www.bam.de/weldx
description = Python API for the WelDX file format and standard
long-description = file: README.md
long_description_content_type = text/markdown
license = BSD License
license-file = LICENSE
platform = any
keywords =
    welding
    weldx
    bam
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Natural Language :: English
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering :: Physics
project_urls =
    Documentation = https://weldx.readthedocs.io
    Source Code = https://github.com/BAMweldx/weldx
    Bug Tracker = https://github.com/BAMweldx/weldx/issues
    Changelog = https://github.com/BAMweldx/weldx/blob/master/CHANGELOG.md

[options]
packages = weldx
python_requires = >=3.7
setup_requires =
    setuptools >=38.3.0
    setuptools_scm
install_requires =
    numpy >=0.18
    pandas >=1.0
    xarray >=0.15
    scipy <1.6
    sympy >=1.6
    pint >=0.11
    asdf >=2.7
    bottleneck >=1.3
    boltons
    networkx >=2
    matplotlib >=3
    fs
    ipywidgets
include_package_data = True

[options.entry_points]
asdf_extensions =
    weldx = weldx.asdf.extension:WeldxExtension
    weldx-asdf = weldx.asdf.extension:WeldxAsdfExtension


[flake8]
# References:
# https://flake8.readthedocs.io/en/latest/user/configuration.html
# https://flake8.readthedocs.io/en/latest/user/error-codes.html

# Note: there cannot be spaces after comma's here
ignore =
    W503,W504,  # line break after binary operator
    E203        # E203 whitespace before ':' (not PEP8 compliant anyway)
max-line-length = 88
select = C,E,F,W,B,B950 # black formatting options
per-file-ignores =
    aws_setup.py:E501
exclude =
    versioneer.py,
    __init__.py,
    doc/conf.py,

[pydocstyle]
match = (?!__)(?!_version)(?!conftest).*\.py
match_dir = [^\.][^\docs].*
ignore = D203,D213

[tool:pytest]
addopts = --tb=short --color=yes -rs --cov=weldx --cov-report=term-missing:skip-covered
#addopts = --tb=short --color=yes -rs -p no:cov
asdf_schema_root = weldx/asdf/schemas
#asdf_schema_tests_enabled = true
# custom test markers, see https://docs.pytest.org/en/latest/example/markers.html#mark-examples
markers =
    slow: marks tests as slow to run (skipped by default, enable with --runslow option)

[isort]
profile = black
default_section = THIRDPARTY
known_first_party = weldx
sections = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER

[coverage:report]
omit =
    weldx/_version.py
    weldx/scripts/*

exclude_lines =
# Have to re-enable the standard pragma
    pragma: no cover

# ignore class __repr__-like functions:
    def __repr__
    def __str__
    def _ipython_display_
