




[options.entry_points]
asdf.extensions =
    weldx = weldx.asdf.extension:get_extensions
    weldx_validators = weldx.asdf._extension:WeldxValidatorExtension
asdf.resource_mappings =
    weldx_schemas = weldx.asdf.extension:get_resource_mappings
console_scripts =
    welding_schema = weldx.asdf.cli.welding_schema:main
